css/source/style.css
/* ==========================================================================
Base
========================================================================== */

body {
  text-rendering: optimizeLegibility;
  font-family: "Ariel", "Ariel Regular", "Helvetica", sans-serif;
  font-size:16px;
  color:#989898;
  background-color: #f4f4f4;
}

html, body {
  height: 100%;
}

h1 {
  font-family: "Ariel", "Ariel Regular", "Helvetica", sans-serif;
  font-size:30px;
  color: #0B3D60;
}

h2 {}

h3 {}

h4 {}

h5 {}

h6 {
  font-size: 12px;
  font-weight: 200;
  letter-spacing: 0.4px;
}
h6:after{
  display: none;
}
.blue-accent {color:#0B3D60;}

p {
  font-family: "Ariel", "Ariel Regular", "Helvetica", sans-serif;
  font-size:16px;
  color:#989898;
}

a {
  text-decoration:none;
}

a:hover {
  text-decoration:none;
}

.grey {
  color:#989898;
}

.btn-primary {
  background: #FFF;
  border-radius: 0px 10px 0px 10px;
  border: 1px solid #FFF;
  color: #989898;
  font-size: 20px;
  padding: 10px 15px;
  opacity:1;
  transition: opacity .3s ease;
}

.btn-primary:after {
  content:"\203A";
}

.btn-primary:hover {
  opacity:.8;
  background:#FFF;
  border:1px solid #FFF;
  color: #989898;
}

.container-fluid {
  width: 100% !important;
}

.container {
  margin: 0 auto !important;
}

.grid {
  margin-top: 20px;
}

.container .grid:first-child {
  margin-top: 50px;
}

.card-unit.hero-unit {
  margin-bottom: 40px;
}

.card-unit.hero-unit {
  margin-bottom: 40px;
}

.filter-row-colorful {
  margin-bottom: 45px;
}

#wrap {
  min-height: 80%;
  padding-top: 55px;
}

#main {
  overflow: auto;
  padding-bottom: 40px;
}

.nopad {
  padding: 0 !important;
}

.nomar {
  margin: 0 !important;
}

.inBlock {
  display: inline-block !important;
}

/* ==========================================================================
Navbar
========================================================================== */
nav {
  border-bottom: 1px #E2DED3 solid !important;
}

.navbar-collapse {
  text-align: center;
}

ul.nav.navbar-nav.navbar-right {
  height: 100%;
}

ul.nav.navbar-nav.navbar-right li a {
  height: 100%;
  line-height: 90px;
  padding-top: 0;
  padding-bottom: 0;
  font-size:18px;
  font-weight: 300;
  letter-spacing: .3px;
}

ul.nav.navbar-nav.navbar-right li form {
  height: 100%;
  padding: 0px 20px 0px 10px;
  margin: 0;
  line-height: 90px;
  font-size: 16px;
  font-weight: 300;
  letter-spacing: .3px;
  color:rgba(0,0,0,.2);
}

a#ambassadors-nav-link {
  color:#0B3D60;
  transition:color .1s ease, background .1s ease;
}

a#story-nav-link {
  color:#A39468;
  transition:color .1s ease, background .1s ease;
}

a#ambassadors-nav-link:hover,
a#story-nav-link:hover {
  background: #0B3D60;
  color: #FFF;
}

.navbar-form input.form-control {
  background: #EDEDED;
  inset: 0px;
  border-radius: 50px;
  height: 45px;
  border: none!important;
  box-shadow: none!important;
  font-size: 16px;
}

span.input-group-addon {
  border-radius: 50px;
  border: none;
  color: #BEBEBE;
  font-size: 18px;
  padding-right: 0px;
}

form.navbar-form .form-group.input-group {
  width: 200px;
}

#nav-logo {
  background-image: url('../../images/mobileLogo.png');
  background-repeat: no-repeat;
  background-size:contain;
  height: 30px;
  width: 190px;
  vertical-align: middle;
  margin: 0;
}

.navbar-toggle {
  padding: 12px 15px !important;
  margin: 1px!important;
}

.navbar-default {
  height: 55px;
  border: none;
  background-color: #FFF;
}

#navy {
  height: 100%;
  width: 100%;
}

.navbar-collapse {
  background: rgba(11,61,96,.5);
  text-align: center;
  padding: 0px;
  margin: 0px;
  border: none;
  border-top: 1px solid #0B3D60!important;
  height: auto;
  width: 100%;
  position: absolute;
  top: 52px;
}

a#ambassadors-nav-link, a#story-nav-link {
  width: 100%;
  background: #FFF;
}

.navbar-default .navbar-form {border:none;}

.navbar-default .navbar-toggle .icon-bar {
  background-color: #0B3D60;
  border: 3px solid #0B3D60;
  width: 29px;
}

.navbar-default .navbar-toggle {
  border: none;
}

.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
  background: none;
}

.navbar-collapse .navbar-nav {
  margin: 0px auto;
  width: 100%;
}

.navbar-collapse.collapse.in ul.nav.navbar-nav.navbar-right li a, .navbar-collapse.collapsing ul.nav.navbar-nav.navbar-right li a  {
  line-height: 54px;
  border-bottom: 1px solid #CBCBCB;
  width: 90%;
  margin: 0 auto;
}
.navbar-collapse.collapsing .navbar-nav {
  margin-top: 0px;
}

form.navbar-form .form-group.input-group {
  width: 480px;
  margin: 20px auto;
}

a#ambassadors-nav-link.main-nav-active {
  background: #0B3D60!important;
  color: #FFF!important;
}

a#story-nav-link.main-nav-active {
  background: #A39468;
  color: #fff;
}

/* ==========================================================================
Footer
========================================================================== */
.footer {
  background-color: #0b3d60;
  position: relative;
  height: auto;
  clear:both;
  padding-top:20px;
  color:#FFF;
  font-size: 13px;
  font-weight: 100;
}

#foottopnav {
  width: 100%;
}

ul#foottopnav li {
  font-size: 13px;
  color: #FFF;
  letter-spacing: .4px;
}

#foottopnav > li {display: inline-block; white-space: nowrap; width: 100%;}
#foottopnav > li > a > h6 {color: #FFF;}
#foottopnav > li > a > h6:after {content: " \00b7"; color: #FFF;}
#foottopnav > li > a > h6.nobullet:after {content: none;}

#jpr {
  color: #FFFFFF;
  font-weight: bold;
  letter-spacing: .4px;
}

.bot {
  text-align: center;
  background-color: rgba(255,255,255,.25);
  display: table;
  color: #FFF;
  list-style: none;
  padding: 0px 10px;
  margin: 8px 3px;
  border-radius: 2px;
  transition: background-color .1s ease;
}

.bot:hover {
  background-color:rgba(255,255,255,1);
  color:#0b3d60;
  text-decoration:none;
}

.bot.highlight {
  color: #0b3d60;
  background: #FFF;
  transition:opacity .3s ease;
}
/* ... */

